--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<tr>
 			<td colspan="2">
 				<h2>Sobre a faculdade</h2>
-				<p>"Informações importante sobre a universidade em geraL<strong> principalmente a cidade proxima de himanailha </strong>todos sabendos do esforço necessario para isso <em> TODOS</em> praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truthBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth"</p>
+				<p>"Informações importante sobre a universidade em geraL<strong> principalmente a cidade proxima de himanailha </strong>todos sabendos do esforço necessario para isso <em> TODOS</em> pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truthBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth"</p>
 					<p>"But I must <strong> dolar </strong>explain to you how all this mistaken idea of denouncing pleasure and <em>praising</em> praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truthBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth"</p>
 
 
