index and new txt create

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<h2>Sobre a faculdade</h2>
 				<p>"Informações importante sobre a universidade em geraL<strong> principalmente a cidade proxima de himanailha </strong>todos sabendos do esforço necessario para isso <em> TODOS</em> pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truthBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth"</p>
 					<p>"But I must <strong> dolar </strong>explain to you how all this mistaken idea of denouncing pleasure and <em>praising</em> praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truthBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth"</p>
+					<p>"But I must <strong> dolar </strong>explain to you how all this mistaken idea of denouncing pleasure and <em>praising</em> praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truthBut I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth"</p>
 
 
 			</td>
@@ -34,6 +35,7 @@
 				<h4 align="center">Todos os direitos reservados</h4>
 			</td>
 		</tr>
+		<p>tudo certo amigo , fica com deus</p>
 		
 
 	</table>
